--- a/css/main.css
+++ b/css/main.css
@@ -37,18 +37,42 @@ header {
   }
 
   #links2 {
-    margin-top: 25%;
+    margin-top: 38%;
     min-width: 20vw;
     justify-content: space-between;
     font-size: 1rem;
   }
+
   .img {
     width: 33px;
     height: 23px;
 
   }
 
-
 input{
     padding: 4px 4px 4px 4px;
+}
+
+.voltar{
+  padding: 6px 6px 6px 6px;
+  background-color: black;
+  color: white;
+  border-radius: 8px;
+  text-decoration: none;
+}
+
+footer{
+  display: flex;
+  padding: 2px 2px 2px 2px;
+  width: 100%;
+  top: 90%;
+  color: white;
+  background-color: rgb(3, 3, 94);
+  position: relative;
+  position: absolute;
+  gap: 20%
+}
+
+.footer{
+  margin-left: 10%;
 }
